crates/markdown-core/tests/snapshots/render__render_unicode.snap
---
source: crates/markdown-core/tests/render.rs
expression: "d.render_html(&RenderOptions::default())"
---
<h1 id="unicode-">Unicode 🎉</h1>
<p>Emoji: 👩‍💻 🇯🇵 🎉
Combining: é ñ ä
CJK: 日本語の<strong>太字</strong>。中文</p>
<ul>
<li>リスト</li>
<li>café <em>✨</em></li>
</ul>
