crates/markdown-core/tests/snapshots/render__render_unicode_lines.snap
---
source: crates/markdown-core/tests/render.rs
expression: d.render_html(&lines())
---
<h1 id="unicode-" data-line="0">Unicode 🎉</h1>
<p data-line="2">Emoji: 👩‍💻 🇯🇵 🎉
Combining: é ñ ä
CJK: 日本語の<strong>太字</strong>。中文</p>
<ul>
<li data-line="6">リスト</li>
<li data-line="7">café <em>✨</em></li>
</ul>
